.env.example alterado para conter json-repairer-prompt e main com melhora na documentação

--- a/env.example
+++ b/env.example
@@ -20,8 +20,14 @@ OPENAI_MODEL=gpt-4o
 # LANGCHAIN HUB
 # ============================================================================
 
-# Nome do prompt no LangChain Hub
+# Nome do prompt de extração no LangChain Hub
 EXTRACTOR_PROMPT_HUB_NAME=ivan-furukawa/extrator-reunioes-bancarias
+
+# Nome do prompt de análise no LangChain Hub
+ANALYZER_PROMPT_HUB_NAME=ivan-furukawa/analisador-sentimento-reunioes-bancarias
+
+# Nome do prompt de reparo de JSON no LangChain Hub
+JSON_REPAIRER_PROMPT_HUB_NAME=ivan-furukawa/reparador-json-reunioes-bancarias
 
 
 # ============================================================================
